--- a/c404WebProject/client/stylesheets/main.scss
+++ b/c404WebProject/client/stylesheets/main.scss
@@ -5,6 +5,24 @@
 
 .container {
     height: 100%;
+    min-width: 1100px;
+
+    .post-editor {
+        width: 100%;
+        margin: auto;
+        background: lightblue;
+        border-radius: 20px;
+
+        .form-group {
+            width: 95%;
+            margin: auto;
+        }
+    }
+
+    .post-editor-save {
+        margin-right: 10%;
+        float: right;
+    }
 
     .list-group {
         line-height: 2em;
@@ -48,7 +66,7 @@
         margin: auto;
         width: 50%;
         background: white;
-        padding: 50px 50px 20px 50px;
+        padding: 50px 50px 20px;
         border-radius: 15px;
     }
 
