--- a/c404WebProject/client/stylesheets/main.scss
+++ b/c404WebProject/client/stylesheets/main.scss
@@ -47,11 +47,22 @@
             width: 95%;
             margin: auto;
         }
+
+        .post-visibility {
+            width: 40%;
+            margin-left: 2.5%;
+        }
+
+        .content-simple-text {
+            width: 100%;
+            height: 150px;
+            margin-top: 20px !important;
+        }
     }
 
     .post-editor-save {
-        margin-right: 10%;
         float: right;
+        margin: 20px 0;
     }
 
     .no-posts {
@@ -78,6 +89,10 @@
             .post-title-font {
                 font-size: 1.25em;
                 color: white;
+            }
+
+            button {
+                margin-right: 4px;
             }
         }
 
