--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -208,14 +208,55 @@
         background: white;
 
         .nav {
-            margin-bottom: 0px;
+            margin-bottom: 0;
+
             li {
                 background: white;
             }
         }
 
         .user-list {
-            margin: 0 0.5% 30px 0.5%;
+            margin: 0 0.5% 30px;
+
+            .header-action {
+                width: 25em;
+            }
+
+            .glyphicon-plus-sign {
+                color: green;
+            }
+
+            .glyphicon-remove-sign {
+                color: red;
+            }
+
+            .btn {
+                width: 20em;
+                white-space: normal;
+                margin: 0.25em 0;
+            }
+
+            .btn-default {
+                background: white;
+            }
+
+            td,
+            th {
+                text-align: center;
+                vertical-align: middle;
+            }
+
+            .btn-success {
+                background: #5cb85c;
+                width: 7em;
+                margin: 0 0.25em;
+            }
+
+            .btn-danger {
+                background: #d9534f;
+                width: 7em;
+                margin: 0 0.25em;
+            }
         }
     }
 }
@@ -531,4 +572,50 @@ span.gha-time {
 
 .gha-push-small {
     height: 26px;
+}
+
+.vanish-after-10 {
+    -moz-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Firefox */
+    -webkit-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Safari and Chrome */
+    -o-animation: cssAnimation 0s ease-in 10s forwards;
+    /* Opera */
+    animation: cssAnimation 0s ease-in 10s forwards;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards;
+}
+@keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        overflow:hidden;
+    }
+}
+@-webkit-keyframes cssAnimation {
+    to {
+        width:0;
+        height:0;
+        visibility:hidden;
+    }
+}
+
+.hide-yall-kids-hide-yall-wife {
+  opacity:0.7;
+  filter: alpha(opacity=20);
+  background-color:#000;
+  width:100%;
+  height:100%;
+  z-index:10;
+  top:0;
+  left:0;
+  position:fixed;
+
+  i {
+    font-size: 15em;
+    color: white;
+    position: absolute;
+    top: 50%;
+    left: 43%;
+  }
 }
