--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -48,6 +48,11 @@
     height: 100%;
     min-width: 1100px;
 
+    .entry {
+        display: flex;
+        align-items: stretch;
+    }
+
     .git-stream {
         width: 45%;
         margin-right: 15px;
@@ -169,10 +174,39 @@
 
     .auth-form {
         margin: auto;
-        width: 50%;
+        width: 45%;
         background: white;
         padding: 50px 50px 20px;
         border-radius: 15px;
+
+        .form-group {
+            display: flex;
+            align-items: center;
+        }
+
+        .col-sm-2 {
+            margin-right: 20%;
+            font-weight: 700;
+        }
+
+        .button-center {
+            display: block;
+            margin: 10px 30%;
+        }
+
+        .btn {
+            width: 10em;
+        }
+
+        .evil-thoughts {
+            text-align: center;
+            font-size: 13px;
+            background: lightgrey;
+            width: 90%;
+            margin: auto;
+            padding: 0.25em;
+            border-radius: 1em;
+        }
     }
 
     .footer {
@@ -587,35 +621,35 @@ span.gha-time {
 }
 @keyframes cssAnimation {
     to {
-        width:0;
-        height:0;
-        overflow:hidden;
+        width: 0;
+        height: 0;
+        overflow: hidden;
     }
 }
 @-webkit-keyframes cssAnimation {
     to {
-        width:0;
-        height:0;
-        visibility:hidden;
+        width: 0;
+        height: 0;
+        visibility: hidden;
     }
 }
 
 .hide-yall-kids-hide-yall-wife {
-  opacity:0.7;
-  filter: alpha(opacity=20);
-  background-color:#000;
-  width:100%;
-  height:100%;
-  z-index:10;
-  top:0;
-  left:0;
-  position:fixed;
+    opacity: 0.7;
+    filter: alpha(opacity=20);
+    background-color: #000;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    position: fixed;
 
-  i {
-    font-size: 15em;
-    color: white;
-    position: absolute;
-    top: 50%;
-    left: 43%;
-  }
+    i {
+        font-size: 15em;
+        color: white;
+        position: absolute;
+        top: 50%;
+        left: 43%;
+    }
 }
