--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -678,20 +678,53 @@ span.gha-time {
     opacity: 0.09;
 }
 
-.ProfileDisplay{
-    h1{
-        color:white;
+.ProfileDisplay {
+    h1 {
+        color: white;
     }
-    .panel{
+
+    .panel {
         border-color: #8bdbeb;
     }
-    .panel-heading{
+
+    .panel-heading {
         border-color: #8bdbeb;
-        background-color:green;
-        color:#1a53ff;
+        background-color: green;
+        color: #1a53ff;
     }
-    .panel-body{
+
+    .panel-body {
         border-width: 10px;
         border-color: #8bdbeb;
+    }
+}
+
+.good-for-nothing-placeholder {
+    visibility: hidden;
+}
+
+.auth-error {
+    color: white;
+    padding: 0.35em;
+    border-radius: 0.5em;
+    text-align: center;
+    width: 65%;
+    margin-left: 22%;
+    background: #d43f3a;
+}
+.elementToFadeInAndOut {
+    background: #d43f3a;
+    -webkit-animation: fadeinout 4s linear forwards;
+    animation: fadeinout 4s linear forwards;
+    opacity: 0;
+}
+@-webkit-keyframes fadeinout {
+    50% {
+        opacity: 1;
+    }
+}
+@keyframes fadeinout {
+    50% {
+        opacity: 1;
     }
 }
