UI adaptions -- going berserk now

--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -69,7 +69,7 @@
 
         .git-group {
             width: 100%;
-            height: 500px;
+            height: 100%;
             overflow-y: scroll;
 
             .list-group-item {
