--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -23,6 +23,32 @@
     margin: 1em;
 }
 
+.failure-pop-up {
+    background: #d43f3a;
+    height: 2em;
+    padding: 0.15em;
+    text-align: center;
+    width: 30em;
+    z-index: 10;
+    position: fixed;
+    top: 0%;
+    left: 35%;
+    border-radius: 0.45em;
+}
+
+.success-pop-up {
+    background: #5bc0de;
+    height: 2em;
+    padding: 0.15em;
+    text-align: center;
+    width: 30em;
+    z-index: 10;
+    position: fixed;
+    top: 0%;
+    left: 35%;
+    border-radius: 0.45em;
+}
+
 .visible {
     display: block;
 }
@@ -772,7 +798,6 @@ span.gha-time {
 }
 
 .elementToFadeInAndOut {
-    background: #d43f3a;
     -webkit-animation: fadeinout 4s linear forwards;
     animation: fadeinout 4s linear forwards;
     opacity: 0;
