--- a/client/stylesheets/main.scss
+++ b/client/stylesheets/main.scss
@@ -290,9 +290,7 @@
             border-radius: 0.5em;
 
             form {
-                display: flex;
-                flex-direction: column;
-                align-items: flex-end;
+                display: block;;
 
                 button {
                     margin-top: 1em;
